--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 
     def versionMajor = versionProps['MAJOR_VERSION']
     def versionMinor = versionProps['MINOR_VERSION']
-    def versionPatch = versionProps['PATCH_VERSION'].toInteger() + 1
-    def versionBuild = versionProps['BUILD_VERSION'].toInteger() + 1
+    def versionPatch = versionProps['VERSION_PATCH'].toInteger() + 1
+    def versionBuild = versionProps['VERSION_BUILD'].toInteger() + 1
     def versionNumber = versionProps['VERSION_NUMBER'].toInteger() + 1
     def vName = "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}"
 
