--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     api project(':base')
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.giphy.sdk:ui:2.0.9'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.opensooq.supernova:gligar:1.1.0'
     implementation 'gun0912.ted:tedbottompicker:2.0.1'
