--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application android:theme="@style/Motiv.Theme">
+        <activity android:name=".ui.styles.NewStyleActivity"></activity>
         <activity android:name=".ManagerActivity" />
         <activity android:name=".ManagerSplash" />
     </application>
