icons changed to its original size

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
         throw new GradleException("Could not read version.properties!")
     }
 
-    def versionMajor = versionProps['MAJOR_VERSION']
-    def versionMinor = versionProps['MINOR_VERSION']
+    def versionMajor = versionProps['MAJOR_VERSION'].toInteger()
+    def versionMinor = versionProps['MINOR_VERSION'].toInteger()
     def versionPatch = versionProps['VERSION_PATCH'].toInteger()
     def versionBuild = versionProps['VERSION_BUILD'].toInteger()
     def versionNumber = versionProps['VERSION_NUMBER'].toInteger()
