--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity android:name=".view.activities.AboutActivity" />
         <activity
-            android:name=".quote.view.EditQuoteActivity"
+            android:name=".quote.EditQuoteActivity"
             android:label="Editar post"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
