--- a/app/version.properties
+++ b/app/version.properties
@@ -1,6 +1,6 @@
-#Fri Jan 08 20:11:21 BRT 2021
-VERSION_NUMBER=39
-MINOR_VERSION=0
-VERSION_BUILD=1
-VERSION_PATCH=0
-MAJOR_VERSION=11
+#Fri Mar 19 19:26:54 BRT 2021
+VERSION_NUMBER=45
+VERSION_MINOR=4
+VERSION_BUILD=7
+VERSION_PATCH=6
+VERSION_MAJOR=11
