ajustes em motiv+: interface melhorada para preview de estilos visualização de estilos alterada
ajustes motiv:
nova tela de usuários do app
tela de pesquisa melhorada
card de frases melhorado

futuras implementações:
preview de estilos em tela de novo post.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     implementation project(':manager')
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation "com.github.skydoves:balloon:1.2.7"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
