--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.creat.motiv">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:name=".MotivApplication"
         android:allowBackup="true"
@@ -13,6 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Motiv.Theme">
+        <activity android:name=".profile.view.SettingsActivity"></activity>
         <activity
             android:name=".view.activities.MainActivity"
             android:label="@string/app_name"
@@ -56,9 +58,7 @@
         <activity
             android:name=".view.activities.Splash"
             android:exported="true"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name="com.ilustris.motiv.manager.ManagerActivity"
             android:label="Motiv+" />
@@ -93,6 +93,7 @@
                 android:name="com.google.firebase.messaging.default_notification_color"
                 android:resource="@color/colorPrimaryDark" />
         </provider>
+
         <service
             android:name=".utilities.Notifications"
             android:exported="false">
