--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.creat.motiv">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -14,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Motiv.Theme">
-        <activity android:name=".profile.view.SettingsActivity"></activity>
+        <activity android:name=".profile.view.SettingsActivity" />
         <activity
             android:name=".view.activities.MainActivity"
             android:label="@string/app_name"
@@ -36,7 +37,7 @@
             android:name=".profile.view.UserActivity"
             android:hardwareAccelerated="true" />
         <activity
-            android:name=".view.activities.ErrorActivity"
+            android:name=".ErrorActivity"
             android:clearTaskOnLaunch="true"
             android:process=":report_process" />
         <activity
@@ -55,10 +56,6 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.activities.Splash"
-            android:exported="true"
-            android:screenOrientation="portrait"></activity>
         <activity
             android:name="com.ilustris.motiv.manager.ManagerActivity"
             android:label="Motiv+" />
