--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Motiv.Theme">
-        <activity android:name=".profile.view.SettingsActivity" />
+        <activity android:name=".profile.view.SettingsFragment" />
         <activity
             android:name=".view.activities.MainActivity"
             android:label="@string/app_name"
