--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,8 @@ repositories {
 }
 
 
-task updateVersion() {
+task updateVersion {
+    doLast {
         println "Updating version"
 
         def versionPropsFile = file("version.properties")
@@ -153,8 +154,6 @@ task updateVersion() {
             }
         }
 
-
-
         versionProps["VERSION_NUMBER"] = versionNumber.toString()
         versionProps["VERSION_MAJOR"] = versionMajor.toString()
         versionProps["VERSION_MINOR"] = versionMinor.toString()
@@ -162,75 +161,11 @@ task updateVersion() {
         versionProps["VERSION_BUILD"] = versionBuild.toString()
 
         versionPropsFile.withWriter { versionProps.store(it, null) }
-}
-
-task generateProduction(dependsOn: "bundleRelease") {
-    println "Deploying new app version"
-
-    def versionPropsFile = file("version.properties")
-    Properties versionProps = new Properties()
-    versionProps.load(new FileInputStream(versionPropsFile))
-
-    def versionPatch = versionProps["VERSION_PATCH"]
-    def versionBuild = versionProps["VERSION_BUILD"]
-    def versionNumber = versionProps["VERSION_NUMBER"]
-    def versionMajor = versionProps['VERSION_MAJOR']
-    def versionMinor = versionProps['VERSION_MINOR']
-
-    def vName = "${versionMajor}-${versionMinor}-${versionPatch}-${versionBuild}-${versionNumber}"
-
-
-    doLast {
-        def destination = "C:/Users/cacai/Documents/Develop/Motiv/"
-        def name = "motiv-release-${vName}.aab"
-        def releaseBundle = file("release/app-release.aab")
-        if (releaseBundle.exists()) {
-            copy {
-                from releaseBundle
-                into file("${destination}")
-                rename {name}
-            }
-            println "Generated new release bundle at $destination/$name"
-        } else {
-            throw new GradleException("Could not find app bundle")
-
-        }
-    }
-}
-
-task getReleaseBundle(dependsOn: "generateProduction") {
-    doLast{
-        def destination = "C:/Users/cacai/Documents/Develop/Motiv"
-        def versionPropsFile = file("version.properties")
-        Properties versionProps = new Properties()
-        versionProps.load(new FileInputStream(versionPropsFile))
-
-        def versionPatch = versionProps["VERSION_PATCH"]
-        def versionBuild = versionProps["VERSION_BUILD"]
-        def versionNumber = versionProps["VERSION_NUMBER"]
-        def versionMajor = versionProps['VERSION_MAJOR']
-        def versionMinor = versionProps['VERSION_MINOR']
-
-        def vName = "${versionMajor}-${versionMinor}-${versionPatch}-${versionBuild}-${versionNumber}"
-
-        def name = "motiv-release-${vName}.aab"
-        def rls = file("${destination}")
-
-        if (rls.exists()) {
-            def os = org.gradle.internal.os.OperatingSystem.current()
-            if (os.isWindows()) {
-                exec { commandLine 'cmd', '/c', "start $rls.path" }
-            } else if (os.isMacOsX()) {
-                exec { commandLine 'open', "$path" }
-            }
-            println "Apk located on -> $rls.absolutePath/$name"
-            println "Deploy successful -> version $vName"
-        } else {
-            throw new GradleException("Could not find app bundle on $destination/$name")
-        }
     }
 
 }
+
+
 
 
 
