--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
     <application
         android:name="com.creat.motiv.MotivApplication"
         android:theme="@style/Motiv.Theme">
+        <activity
+            android:name=".ui.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Motiv.Theme.NoActionBar"></activity>
         <activity android:name=".ui.styles.NewStyleActivity" />
         <activity android:name=".ManagerActivity" />
     </application>
