--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.airbnb.android:lottie:3.4.0'
+    implementation 'com.waynejo:androidndkgif:0.3.3'
 
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     kapt 'com.android.databinding:compiler:3.1.4'
