removed databind from base module

--- a/base/build.gradle
+++ b/base/build.gradle
@@ -16,7 +16,7 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
     buildFeatures {
-        dataBinding true
+        viewBinding = true
     }
     buildTypes {
         release {
