--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
@@ -108,8 +107,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.airbnb.android:lottie:3.4.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-    kapt 'com.android.databinding:compiler:3.1.4'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
 repositories {
     mavenCentral()
