--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,21 +21,14 @@
             android:label="@string/app_name"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".features.about.AboutFragment" />
-        <activity
-            android:name=".quote.EditQuoteActivity"
-            android:label="Editar post"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".profile.view.UserActivity"
-            android:hardwareAccelerated="true" />
+        Z
         <activity
             android:name="com.ilustris.motiv.base.ErrorActivity"
             android:clearTaskOnLaunch="true"
