--- a/base/build.gradle
+++ b/base/build.gradle
@@ -47,10 +47,13 @@ dependencies {
 
     api 'com.github.CaioProgramming.Ilustris:core:2.1.10'
     api 'com.github.CaioProgramming.Ilustris:animations:2.1.10'
+    api 'androidx.navigation:navigation-fragment-ktx:2.4.0-rc01'
+    api 'androidx.navigation:navigation-ui-ktx:2.4.0-rc01'
+    api 'com.android.support:multidex:1.0.3'
+
     api 'com.google.android.gms:play-services-ads:20.5.0'
     api 'de.hdodenhof:circleimageview:3.1.0'
     api 'com.github.mmin18:realtimeblurview:1.1.2'
-    api 'com.android.support:multidex:1.0.3'
     api 'com.facebook.android:facebook-android-sdk:8.1.0'
     api 'cat.ereza:customactivityoncrash:2.3.0'
 
