--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.4.31'
+        kotlin_version = '1.6.10'
     }
     repositories {
         google()
@@ -12,10 +12,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.databinding:dataBinder:1.0-rc1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-beta02")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-rc01")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
