--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application
-        android:name="com.ilustris.motiv.base.MotivApplication"
-        android:theme="Motiv.Theme">
+    <application android:name="com.ilustris.motiv.base.MotivApplication">
         <activity
             android:name=".ui.HomeActivity"
             android:label="@string/title_activity_home" />
