--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application android:name="com.ilustris.motiv.base.MotivApplication">
+    <application
+        android:name="com.ilustris.motiv.base.MotivApplication"
+        android:theme="@style/Motiv.Theme">
         <activity
             android:name=".ui.HomeActivity"
             android:label="@string/title_activity_home" />
-        <activity android:name=".ui.styles.NewStyleActivity" />
-        <activity android:name=".ManagerActivity" />
+        <activity android:name=".features.style.newstyle.NewStyleFragment" />
+        <activity android:name=".features.ManagerActivity" />
     </application>
 
 </manifest>
