--- a/base/build.gradle
+++ b/base/build.gradle
@@ -45,8 +45,8 @@ dependencies {
 
     api "com.github.CaioProgramming.Ilustris:core:$ilustris_version"
     api "com.github.CaioProgramming.Ilustris:animations:$ilustris_version"
-    api 'androidx.navigation:navigation-fragment-ktx:2.4.0-rc01'
-    api 'androidx.navigation:navigation-ui-ktx:2.4.0-rc01'
+    api 'androidx.navigation:navigation-fragment-ktx:2.5.0-alpha01'
+    api 'androidx.navigation:navigation-ui-ktx:2.5.0-alpha01'
     api 'com.android.support:multidex:1.0.3'
 
     api 'com.google.android.gms:play-services-ads:20.5.0'
