--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
     ext {
         kotlin_version = '1.6.10'
-        ilustris_version = '2.2.2'
+        ilustris_version = '2.3.0'
     }
     repositories {
         google()
@@ -16,7 +16,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.databinding:dataBinder:1.0-rc1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.0-rc01")
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha01")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
