--- a/base/build.gradle
+++ b/base/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,11 +32,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -44,28 +41,35 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     api "com.github.CaioProgramming.Ilustris:core:$ilustris_version"
+    api "com.github.CaioProgramming.Ilustris:ui:$ilustris_version"
     api "com.github.CaioProgramming.Ilustris:animations:$ilustris_version"
-    api 'androidx.navigation:navigation-fragment-ktx:2.5.0-alpha01'
-    api 'androidx.navigation:navigation-ui-ktx:2.5.0-alpha01'
+    api 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    api 'androidx.navigation:navigation-ui-ktx:2.5.1'
     api 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
-    api 'com.google.android.gms:play-services-ads:20.5.0'
+    api "io.insert-koin:koin-core:$koin_version"
+    api "io.insert-koin:koin-android:$koin_version"
+    api "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    api "io.insert-koin:koin-androidx-navigation:$koin_version"
+
+    api 'com.google.android.gms:play-services-ads:21.1.0'
     api 'de.hdodenhof:circleimageview:3.1.0'
     api 'com.github.mmin18:realtimeblurview:1.1.2'
     api 'com.facebook.android:facebook-android-sdk:8.1.0'
     api 'cat.ereza:customactivityoncrash:2.3.0'
 
     api platform('com.google.firebase:firebase-bom:25.12.0')
-    api 'com.google.firebase:firebase-core:20.0.2'
+    api 'com.google.firebase:firebase-core:21.1.1'
     api 'com.google.firebase:firebase-firestore-ktx'
-    api 'com.google.firebase:firebase-auth:21.0.1'
-    api 'com.firebaseui:firebase-ui-auth:8.0.0'
+    api 'com.google.firebase:firebase-auth:21.0.8'
+    api 'com.firebaseui:firebase-ui-auth:8.0.1'
     api 'com.google.firebase:firebase-database-ktx'
     api 'com.google.firebase:firebase-storage-ktx'
     api 'com.google.firebase:firebase-appindexing:20.0.0'
     api 'com.firebaseui:firebase-ui-database:8.0.0'
-    api 'com.google.firebase:firebase-storage:20.0.0'
-    api 'com.google.firebase:firebase-messaging:23.0.0'
+    api 'com.google.firebase:firebase-storage:20.0.2'
+    api 'com.google.firebase:firebase-messaging:23.0.8'
     api 'com.google.firebase:firebase-crashlytics-ktx'
     api 'com.google.firebase:firebase-analytics-ktx'
     api 'com.airbnb.android:lottie:3.6.0'
