--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.6.10'
-        ilustris_version = '2.3.1'
+        ext.kotlin_version = '1.7.10'
+        ext.ilustris_version = '2.5.5'
+        ext.koin_version = "3.1.5"
     }
     repositories {
         google()
@@ -12,11 +13,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.13'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.databinding:dataBinder:1.0-rc1'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.0-alpha01")
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
